# my365py

./: .gitignore  README.md  TEST_api.ipynb  cli.py  pyproject.toml
lib/: my365py_auth.py  my365py_config.py  my365py_logger.py
lib/my365py_onedrive/: commands.py
lib/my365py_outlook/: commands.py
