[project]
name = "my365py"
version = "0.1.0"
description = "Commandline tool for working with Microsoft 365 through the Graph API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.0",
    "duckdb>=1.4.0",
    "httpx>=0.28.1",
    "jupyter>=1.1.1",
    "loguru>=0.7.3",
    "msal>=1.34.0",
    "msgraph-sdk>=1.45.0",
    "onepassword>=0.4.1",
    "onepassword-sdk>=0.3.1",
]

[project.scripts]
my365py = "cli:cli"
